--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-hook-form": "^7.33.1",
     "react-toastify": "^9.0.5",
     "swr": "^1.3.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
