--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@hookform/resolvers": "^2.9.3",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
-    "moment": "^2.29.3",
+    "dayjs": "^1.11.3",
     "next": "12.2.0",
     "next-i18next": "^11.0.0",
     "nprogress": "^0.2.0",
@@ -28,6 +28,7 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@next/env": "^12.2.2",
     "@types/node": "18.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.14",
